<resources>
    <string name="app_name">Login</string>

    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="txt_cadastro">Crie uma conta clicando aqui</string>
    <string name="title_cadastro">Cadastre-se</string>
    <string name="edit_nome">Nome</string>
    <string name="edit_email">Email</string>
    <string name="edit_senha">Senha</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="btn_deslogar">Deslogar</string>
    <string name="email_do_usuario">Email do usuario</string>
    <string name="nome_do_usuario">Nome do usuario</string>
</resources>