<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logocoffee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/containerComponents"
        style="@style/ContainerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_text"
        android:hint="@string/email"
        android:drawableEnd="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
        app:layout_constraintTop_toTopOf="@id/containerComponents"
        />

    <EditText
        android:id="@+id/edit_password"
        style="@style/Edit_text"
        android:hint="@string/senha"
        android:drawableEnd="@drawable/ic_eye"
        app:layout_constraintStart_toStartOf="@+id/containerComponents"
        app:layout_constraintEnd_toEndOf="@+id/containerComponents"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_entrar"
        style="@style/Button"
        android:text="@string/entrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
       />

</androidx.constraintlayout.widget.ConstraintLayout>